fix alignment of facets

--- a/app/assets/stylesheets/blacklight/hierarchy/hierarchy.scss
+++ b/app/assets/stylesheets/blacklight/hierarchy/hierarchy.scss
@@ -88,6 +88,7 @@ $text-muted: #777 !default;
     display: flex;
     flex-wrap: wrap;
     padding: 3px 0;
+    align-items: center;
   }
 
   .h-leaf {
